--- a/src/aiai_app_frontend/package.json
+++ b/src/aiai_app_frontend/package.json
@@ -18,8 +18,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/fiber": "^8.17.5",
+    "@types/three": "^0.167.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.29",
     "lucide-react": "^0.429.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +30,8 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
