--- a/src/aiai_app_frontend/package.json
+++ b/src/aiai_app_frontend/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css}\""
   },
   "dependencies": {
-    "@dfinity/agent": "^1.4.0",
-    "@dfinity/candid": "^1.4.0",
-    "@dfinity/principal": "^1.4.0",
+    "@dfinity/agent": "^2.0.0",
+    "@dfinity/auth-client": "^2.0.0",
+    "@dfinity/authentication": "^0.14.2",
+    "@dfinity/candid": "^2.0.0",
+    "@dfinity/principal": "^2.0.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
