--- a/src/aiai_app_frontend/package.json
+++ b/src/aiai_app_frontend/package.json
@@ -16,10 +16,13 @@
     "@dfinity/authentication": "^0.14.2",
     "@dfinity/candid": "^2.0.0",
     "@dfinity/principal": "^2.0.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@react-three/fiber": "^8.17.5",
     "@types/three": "^0.167.2",
     "class-variance-authority": "^0.7.0",
