--- a/src/aiai_app_frontend/package.json
+++ b/src/aiai_app_frontend/package.json
@@ -36,7 +36,8 @@
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
